# Stress_Control

./: README.md  pyproject.toml
docs/: design.md  platform-notes.md  report-schema.md
reports/: report_20260209-001537.json  report_20260209-002037.json
scripts/: run_windows.ps1  run_wsl.sh
src/: cli.py
src/stress_control/: analyzer.py
src/stress_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ui/: config.json  index.html  package.json  tsconfig.node.json  vite.config.ts
ui/electron/: main.ts  preload.ts
ui/scripts/: ensure-electron-module.cjs
ui/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
